--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,6 @@
 <head>
   <title>Hoboken's Tech Task Force | {{page.title}}</title>
+  <link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <nav>
