--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,90 @@
+<!DOCTYPE html>
+
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
-  <title>Hoboken's Tech Task Force | {{page.title}}</title>
-  <link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8" />
+
+    <!-- Set the viewport width to device width for mobile -->
+    <meta name="viewport" content="width=device-width" />
+
+    <title>Hoboken's Tech Task Force | {{page.title}}</title>
+
+    <!-- Included CSS Files (Compressed) -->
+    <link rel="stylesheet" href="/css/foundation.min.css">
+    <link rel="stylesheet" href="/css/style.css">
+
+    <script src="javascript/modernizr.foundation.js"></script>
+    <script src="javascript/meetup.js"></script>
+
+    <!-- IE Fix for HTML5 Tags -->
+    <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="groups.htm">Tech Groups</a></li>
-      <li><a href="events.htm">Tech Events</a></li>
-      <li><a href="startups.htm">Startups</a></li>
-      <li><a href="working.htm">Who to Work With</a></li>
-    </ul>
-  </nav>
-  {{ content }}
+
+    <header>
+        <nav class="top-bar attached">
+            <ul>
+                <li><a class="button" href="/">Home</a></li>
+                <li><a class="button" href="groups.htm">Tech Groups</a></li>
+                <li><a class="button" href="events.htm">Tech Events</a></li>
+                <!--<li><a class="button" href="startups.htm">Startups</a></li>-->
+                <li><a class="button" href="working.htm">Who to Work With</a></li>
+            </ul>
+        </nav>
+        <h1>Hoboken Tech Task Force</h1>
+    </header>
+
+    {{ content }}
+
+    <footer class="row">
+        <p>Copyright 2012 Hoboken Tech Task Force
+            <br>
+        </p>
+    </footer>
+
+
+    <!-- Included JS Files (Uncompressed) -->
+    <!--
+
+    <script src="javascripts/jquery.js"></script>
+
+    <script src="javascripts/jquery.foundation.mediaQueryToggle.js"></script>
+
+    <script src="javascripts/jquery.foundation.forms.js"></script>
+
+    <script src="javascripts/jquery.foundation.reveal.js"></script>
+
+    <script src="javascripts/jquery.foundation.orbit.js"></script>
+
+    <script src="javascripts/jquery.foundation.navigation.js"></script>
+
+    <script src="javascripts/jquery.foundation.buttons.js"></script>
+
+    <script src="javascripts/jquery.foundation.tabs.js"></script>
+
+    <script src="javascripts/jquery.foundation.tooltips.js"></script>
+
+    <script src="javascripts/jquery.foundation.accordion.js"></script>
+
+    <script src="javascripts/jquery.placeholder.js"></script>
+
+    <script src="javascripts/jquery.foundation.alerts.js"></script>
+
+    <script src="javascripts/jquery.foundation.topbar.js"></script>
+
+    -->
+
+    <!-- Included JS Files (Compressed) -->
+    <script src="/javascript/jquery.js"></script>
+    <script src="/javascript/foundation.min.js"></script>
+
+    <!-- Initialize JS Plugins -->
+    <!--<script src="javascript/meetup.js"></script>-->
 </body>
+</html>
