--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,10 @@
     <link rel="stylesheet" href="/css/foundation.min.css">
     <link rel="stylesheet" href="/css/style.css">
 
+    <!-- Google Web Fonts - that's a paddlin' -->
+    <link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700' rel='stylesheet' type='text/css'>
+
+    <!-- JS -->
     <script src="javascript/modernizr.foundation.js"></script>
     <script src="javascript/meetup.js"></script>
 
@@ -37,7 +41,7 @@
                 <li><a class="button" href="working.htm">Who to Work With</a></li>
             </ul>
         </nav>
-        <h1>Hoboken Tech Task Force</h1>
+        <h1>Hoboken <span class="httf-color">Tech Task Force</span></h1>
     </header>
 
     {{ content }}
