--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,8 @@
 
     <header>
         <nav class="top-bar attached">
+            <h1><a href="/">Hoboken Tech Task Force</a></h1>
+
             <ul>
                 <li><a class="button" href="/">Home</a></li>
                 <li><a class="button" href="groups.htm">Tech Groups</a></li>
@@ -40,17 +42,35 @@
                 <!--<li><a class="button" href="startups.htm">Startups</a></li>-->
                 <li><a class="button" href="working.htm">Who to Work With</a></li>
             </ul>
+
         </nav>
-        <h1>Hoboken <span class="httf-color">Tech Task Force</span></h1>
     </header>
 
-    {{ content }}
+    <section class="container">
+        {{ content }}
+    </section>
 
-    <footer class="row">
-        <p>Copyright 2012 Hoboken Tech Task Force
-            <br>
+    <footer>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="groups.htm">Tech Groups</a></li>
+            <li><a href="events.htm">Tech Events</a></li>
+            <!--<li><a class="button" href="startups.htm">Startups</a></li>-->
+            <li><a href="working.htm">Who to Work With</a></li>
+        </ul>
+
+        <section class="footer-logos">
+            <p>Coding and Design by:</p>
+            <a href="http://ploonky.com" target="_blank"><img class="logo-ploonky" src="images/ploonky-small.png"></a>
+            <a href="http://320ny.com" target="_blank"><img class="logo-320ny" src="images/320ny-small.png"></a>
+        </section>
+
+        <p>
+            <a href="#">hello@hobokentechtaskforce.com</a>
+            <br>Copyright &copy; 2012 Hoboken Tech Task Force
         </p>
     </footer>
+
 
 
     <!-- Included JS Files (Uncompressed) -->
