--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,8 +61,8 @@
 
         <section class="footer-logos">
             <p>Coding and Design by:</p>
-            <a href="http://ploonky.com" target="_blank"><img class="logo-ploonky" src="images/ploonky-small.png"></a>
-            <a href="http://320ny.com" target="_blank"><img class="logo-320ny" src="images/320ny-small.png"></a>
+            <a href="http://ploonky.com" target="_blank"><img class="logo-ploonky" src="images/ploonky-small.png" alt="ploonky" title="ploonky"></a>
+            <a href="http://320ny.com" target="_blank"><img class="logo-320ny" src="images/320ny-small.png" alt="320ny" title="320ny"></a>
         </section>
 
         <p>
