--- a/css/style.css
+++ b/css/style.css
@@ -130,24 +130,19 @@ header li a.button:hover {
 }
 .groups-member h2 {
   font-family: 'Rokkitt', serif;
+  border-bottom: 2px solid #00C8F5;  
 }
 .groups-member a {
   float: left;
   width: 30%;
   margin-right: 10px;
-  padding: 10px;
-  background: #fff;
-  border: 2px solid #00C8F5;
-  border-radius: 4px;
-  -webkit-border-radius;
+  padding-right: 10px;
 }
 .groups-member p {
   margin: 0;
   padding: 0;
 }
-.groups a img {
 
-}
 
 
 /* ------------------------------
