--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8" />
 
     <!-- Set the viewport width to device width for mobile -->
-    <meta name="viewport" content="width=960">
+    <meta name="viewport" content="width=device-width">
 
     <title>Hoboken's Tech Task Force | {{page.title}}</title>
 
