--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ nav {
 }
 .top-bar ul {
   display: inline-block;
+  margin-top: 10px;
   margin-bottom: 0;
   line-height: 1px;
   width: 622px;
@@ -76,7 +77,7 @@ header li:hover {
   color: #fff !important;
 }
 header li a.button {
-  padding: 15px 20px;
+  padding: 12px 20px;
   color: #fff;
   background: #00B7E0;
   text-shadow: 0 -1px 0 #0085A3;
